# LLM-Inference-Benchmark-CLI

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
llmbench/: __init__.py  __main__.py  cli.py  metrics.py  reporter.py  runner.py  storage.py  visualizer.py
llmbench/prompts/: __init__.py  coding.json  creative.json  qa.json  reasoning.json  summarization.json
tests/: test_cli_utils.py  test_metrics.py  test_prompts.py  test_runner.py  test_storage.py  test_visualizer.py
