[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-bench"
version = "0.1.0"
description = "Local LLM inference benchmark: Dense vs MoE, Thinking vs Standard on Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numpy>=1.26",
]

[project.scripts]
llm-bench = "llmbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["llmbench"]
